# SensorNoiseSimulator

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.md  docker-compose.yml  pyproject.toml
docs/: docker.md  input-formats.md  noise-validation-report.md  python-library.md
examples/hosted-viewer/: server.mjs
examples/hosted-viewer/public/: index.html  main.js  raw-electron.json  style.css
examples/hosted-viewer/public/assets/: README.md
examples/hosted-viewer/public/assets/test-inputs/: color_patches_512x256.hdr  gradient_ramp_512x256.hdr  highlight_clip_512x256.hdr  linear_photon_ramp_512x256.hdr  low_light_noise_512x256.hdr  manifest.json
examples/hosted-viewer/public/assets/test-inputs/raw/: bayer_grbg_gradient_512x256_u16le.raw  bayer_grbg_low_light_512x256_u16le.raw  manifest.json  tetra_grbg_low_light_512x256_u16le.raw  tetrasquare_grbg_color_512x256_u16le.raw
examples/hosted-viewer/public/modules/: image-inputs.js  isp-shader.js  viewer-state.js
examples/hosted-viewer/public/sensors/: BasicSensor.sensor-prs.json  BasicSensorHCG.sensor-prs.json  BasicSensorLCG.sensor-prs.json  manifest.json
scripts/: generate-test-hdrs.mjs  generate-test-raws.mjs  validate_noise_pipeline.py
skills/sensor-noise-simulator/: SKILL.md
skills/sensor-noise-simulator/agents/: openai.yaml
skills/sensor-noise-simulator/references/: python-cli.md
skills/sensor-noise-simulator/scripts/: run_noise_sim.py
src/sensor_noise_simulator/: __init__.py  cli.py  io.py  models.py  simulation.py
