[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensor-noise-simulator"
version = "0.1.0"
description = "Reference Python simulation engine for SensorNoiseSimulator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
]

[project.scripts]
sensor-noise-sim = "sensor_noise_simulator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
